--- a/dev/sass/graphic.scss
+++ b/dev/sass/graphic.scss
@@ -18,14 +18,15 @@
       position: absolute;
       top: 128px;
       left: -66px;
-      width: 131px;
+      width: 100%;
+      max-width: 131px;
       height: 539px;
       background-image: url(assets/img/left.png);
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-      @include xl {
-        @include visually-hidden;
+      @include xxl {
+        display: none;
       }
     }
     &::before {
@@ -33,14 +34,15 @@
       position: absolute;
       top: 91px;
       right: -146px;
-      width: 207px;
+      width: 100%;
+      max-width: 207px;
       height: 631px;
       background-image: url(assets/img/right.png);
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-      @include xl {
-        @include visually-hidden;
+      @include xxl {
+        display: none;
       }
     }
   }
